getting hero image to fit section correctly, no overflow into features

--- a/styles.css
+++ b/styles.css
@@ -1351,20 +1351,24 @@ footer {
                 transform: translate(0, 0);
             }
 
-            .hero-slideshow-container{
-                background-color: black;
-            }
 
             .heroSlides {
                 opacity: 0.3;
                 
                 img {
                     width: auto;
-                    height: 100%
+                    height: 100%;
                 }
             }
         }
     }
+
+
+    .hero-slideshow-container{
+        background-color: black;
+        height: 100%;
+    }
+
 
     #processContainer {
         flex-direction: column;
@@ -1469,6 +1473,11 @@ footer {
     #navLogoContainer {
         height: 3em;
     }
+
+
+    /* #features {
+        margin-top: 6em;
+    } */
 
 
 
